BMSSimplificationEclipseWS/EUFULL-Org-Backup/src/objects/KAM_Report_BMS_CORE__c.object
<CustomObject>
    <fields>
        <fullName>KAM_Report_BMS_CORE__c</fullName>
        <label>Plan</label>
        <referenceTo>Account_Plan_vod__c</referenceTo>
        <relationshipLabel>KAM Reports</relationshipLabel>
        <relationshipName>KAM_Reports</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Key_Account_Progress_BMS_CORE__c</fullName>
        <label>Key Progress</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Key_Insights_BMS_CORE__c</fullName>
        <label>Key Insights</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Key_Intelligence_BMS_CORE__c</fullName>
        <label>Key Intelligence</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Manager_BMS_CORE__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Kam_Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Mobile_ID_vod__c</fullName>
        <externalId>true</externalId>
        <label>Mobile ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Performance_Tracking_BMS_CORE__c</fullName>
        <label>Performance Tracking</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Report_Month_BMS_CORE__c</fullName>
        <label>Report Month</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Report_Quarter_BMS_CORE__c</fullName>
        <label>Report Quarter</label>
        <picklist>
            <picklistValues>
                <fullName>1st</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2nd</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3rd</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4th</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Report_Type__c</fullName>
        <label>Report Type</label>
        <picklist>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quarterly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annual</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Report_Year_BMS_CORE__c</fullName>
        <label>Report Year</label>
        <picklist>
            <picklistValues>
                <fullName>2015</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2016</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2017</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2018</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2019</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2020</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status_BMS_CORE__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Draft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reviewed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Archive</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>KAM Report</label>
    <nameField>
        <displayFormat>MR-{000000}</displayFormat>
        <label>Report ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>KAM Reports</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>